<resources>
    <string name="app_name">PMDM_Proyecto2</string>
    <string name="btnPrueba1">Internet</string>
    <string name="btnPrueba2">Cámara</string>
    <string name="btnPrueba3">Mates</string>
    <string name="btnPrueba4">Pulsa !</string>
    <string name="lblPrueba1">INTERNET</string>
    <string name="lblPrueba2">CÁMARA</string>
    <string name="lblPrueba3">MATES</string>
    <string name="lblPrueba4">INVENTADO</string>
    <string name="lblWelcome">COMPLETA LOS RETOS</string>
    <string name="lblPreguntaInternet">¿Cuál es la longitud de la Muralla China?</string>
    <string name="btnOkInternet">OK</string>
    <string name="textoInputInternet" />
    <string name="lblInfoInternet">Puedes usar Internet como ayuda!</string>
    <string name="textInputBuscar" />
    <string name="btnbuscar">AYUDA</string>
    <string name="txtTituloCamara">¡SACA UNA FOTO CON EL COLOR ROJO!</string>
    <string name="btnCamara">CÁMARA</string>
    <string name="txtMates1">Cuál es el resultado de...</string>
    <string name="txtEcuacion">x^2+5x+6  = 0</string>
    <string name="txtSol1">x=-2 y x=-3</string>
    <string name="txtSol2">x = 9</string>
    <string name="txtSol3">x = 6 y x= 5</string>
    <string name="txtSol4">x = 31</string>
    <string name="btnComprobarMates">Comprobar</string>
    <string name="btnComprobarFoto">Comprobar</string>
    <string name="btnDale">GO</string>
    <string name="txtPulsa">PULSA 50 VECES</string>
    <string name="btnVolver4">Volver</string>
    <string name="btnVolver3">Volver</string>
    <string name="btnVolver2">Volver</string>
    <string name="btnVolver1">Volver</string>
    <string name="txtPuntuacion">Puntuación: 0</string>

</resources>
