<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7982B689"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lblWelcome"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPrueba1"
        android:layout_width="116dp"
        android:layout_height="87dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="152dp"
        android:backgroundTint="#8DD1C8"
        android:text="@string/btnPrueba1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPrueba2"
        android:layout_width="116dp"
        android:layout_height="87dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="152dp"
        android:backgroundTint="#8DD1C8"
        android:text="@string/btnPrueba2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPrueba3"
        android:layout_width="116dp"
        android:layout_height="87dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="336dp"
        android:backgroundTint="#8DD1C8"
        android:text="@string/btnPrueba3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPrueba4"
        android:layout_width="116dp"
        android:layout_height="87dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="336dp"
        android:backgroundTint="#8DD1C8"
        android:text="@string/btnPrueba4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="464dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtPuntuacion"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="525dp" />

</androidx.constraintlayout.widget.ConstraintLayout>